# chaster-python-sdk

./: .gitignore  DECISION_LOG.md  Makefile  README.md  out.txt  pyproject.toml  requirements.txt
demos/: README.md  TrapBotDockerfile  asdf.py  compose.yaml  self_lock.py  send_me_a_message.py  shared_lock_extension_usage.py  trap_bot.env
demos/shared/: requirements.txt  shared.py
demos/shared/tests/: __init__.py  test_unit.py
demos/trap_bot/: Dockerfile  README.md  app.py  requirements.txt
demos/trap_bot/tests/: __init__.py  test_unit.py
docs/: DECISION_LOG.md  devsetup.md
rate_imit_experiment/: send_me_a_message.py
src/: api.py  conversation.py  extensions.py  lock.py  setup.py  shared_lock.py  triggers.py  user.py
src/chaster/: api.py  conversation.py  extensions.py  lock.py  setup.py  triggers.py  user.py  util.py
tests/: __init__.py  response_examples.py  test_api_integration.py  test_api_mock_chaster.py  test_dto.py
tests/integration/: test_api_integration.py
