[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "chaster-sdk"
version = "0.1.4"
authors = [
    { name = "Poofy", email = "poofy.enigma@gmail.com" },
]
description = "Chaster python sdk"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "python-dateutil",
    "requests"
]

[project.urls]
Homepage = "https://github.com/PoofyEnigma/chaster-python-sdk"
Issues = "https://github.com/PoofyEnigma/chaster-python-sdk/issues"